--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,9 @@ body {
   max-height: 135vh;
   margin: auto;
 }
+.centerImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 5%;
+}
