--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ body {
   margin: auto;
 }
 .ScreenshotText {
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   max-height: 135vh;
   margin: auto;
@@ -52,5 +54,5 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 5%;
+  width:8%;
 }
