--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,31 @@ body {
   max-height: 10vh;
   margin: auto;
 }
+
+.BorderRound {
+  border-radius: 25px;
+  border-color: #000000;
+  border-style: solid;
+  /* TOP & BOTTOM: 5px, LEFT & RIGHT: 20px */
+  border-width: 15px 15px;
+}
+/* 
+  border-image:   linear-gradient(to top, red 1%, teal 100%) 2;
+  */
+.BorderRoundCenter {
+  display: block;
+  max-width: 100%;
+  max-height: 135vh;
+  margin: auto;
+  
+  border-radius: 50px;
+  border-color: #d1d1d1;
+  
+  border-style: inset;
+  border-width: 0px 0px;
+  /* TOP & BOTTOM: 5px, LEFT & RIGHT: 20px */
+}
+
 .ScreenshotText {
   margin-left: auto;
   margin-right: auto;
