--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,17 @@ body {
   margin: 0;
 }
 
+#search {
+    width: 20em;  height: 4em;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: 3px solid green;
+}
 .tabs {
   display: flex;
   justify-content: space-around;
